Fixed some FindBugs issues:
-switched from keySet to more efficient entrySet
-switched to Integer.valueOf instead of direct construction.